--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
     <title>Personal Site</title>
 </head>
 <body>
-    <h1>About Me</h1>
+    <h1>Arga Portofolio</h1>
     <p><img src = "images/PHOTO-2025-01-30-03-45-19.jpg" widht ="300" height = "400"></p>
     <p>Name : Arga Adhytia Desra</p>
     <p>TTL : 19 Desember 1999 Padang</p>
+    <main>
+        <section>
+            <h2>Project</h2>
+            <ol>
+                <li><a href = "#">personal Site</a></li>
+            </ol>
+        </section>
+        <aside>
+            <h2>About Me</h2>
+        </aside>
+    </main>
 
 </body>
 </html>
